--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,8 @@ click-aliases = "^1.0.1"
 PyYAML = "^6.0"
 boto3 = "^1.26.8"
 inquirerpy = "^0.3.4"
+requests-aws4auth = "^1.2.3"
+colorama = "^0.4.6"
 
 
 [build-system]
